network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: db-only-namespace
  namespace: wordpress   
spec:
  podSelector:
    matchLabels:
      app: mysql     
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: wordpress
  egress:
  - to:
    - namespaceSelector:
        matchLabels:
          app: wordpress
